[package]
name = "spc-presenter-rs"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
spc = { path = "external/spc" }
tiny-skia = "0.11.2"
image = "0.24"
ringbuf = "0.3.3"
ffmpeg-next = "6.0"
ffmpeg-sys-next = "6.0"
clap = "4.3.1"
encoding_rs = "0.8.32"
indicatif = "0.17.5"
rustfft = "6.1.0"
base64 = "0.21"
slint = "1.3.0"
native-dialog = "0.6.3"
rand = "0.8.5"
anyhow = "1.0"
csscolorparser = { version = "0.6.2", features = ["serde"] }
toml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
