[package]
name = "spc-presenter-rs"
version = "0.2.0-beta.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
spc = { path = "external/spc" }
tiny-skia = "0.11.3"
image = "0.24"
ringbuf = "0.3.3"
ffmpeg-next = "6.1"
ffmpeg-sys-next = "6.1"
clap = "4.3"
encoding_rs = "0.8.33"
indicatif = "0.17.7"
rustfft = "6.1.0"
base64 = "0.21"
slint = "1.3.2"
native-dialog = "0.6.4"
rand = "0.8.5"
anyhow = "1.0"
csscolorparser = { version = "0.6.2", features = ["serde"] }
toml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.3.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
